# biovault

./: .gitignore  .gitmodules  DEV.md  README.md  SECURITY.md  TODO.md  bv  clippy.sh  coverage.sh  decrypt.sh  flow.sh  genomes.txt  install.sh  justfile  licenses.sh  lint.sh  madhava.sh  manifest.xml  nextflow.config  oca2.nf  pipeline.sh  pipeline_sql.yaml  pipelines.md  plan-a-wsl2.md  planb-hyperv.md  pt.yaml  repo.ps1  run_demo_sql.sh  submodules.sh  template.nf  test-chaos.sh  test-integration.sh  test-scenario.sh  test-smoke.sh  test.sh  win.ps1  windocker.md
cli/: Cargo.toml  build.rs
cli/.cargo/: config.toml
cli/examples/: examples.yaml
cli/examples/apol1-bs/: module.yaml  project.yaml  workflow.nf
cli/examples/apol1-bs/apol1_input/: case_0014_canonical.tsv  participants.csv
cli/examples/apol1-bs/assets/: bs_classifier.py
cli/examples/apol1-sheet/: apol1_test_data.py  module.yaml  project.yaml  workflow.nf
cli/examples/apol1-sheet/apol1_input/: case_0001_canonical.tsv  case_0002_canonical.tsv  case_0013_canonical.tsv  case_0025_canonical.tsv
cli/examples/apol1-sheet/assets/: apol1_classifier.py  schema.yaml
cli/examples/count-snps/: module.yaml  project.yaml  template.nf  workflow.nf
cli/examples/count-snps/assets/: count_number_of_snps.py
cli/examples/eye-color/: module.yaml  project.yaml  workflow.nf
cli/examples/haplo-y/: module.yaml  project.yaml
cli/examples/pgsc-prep/: project.yaml  workflow.nf
cli/examples/pgsc-prep/assets/: README.md  convert_to_plink.py
cli/examples/pipeline/: filter_samples_spec.yaml  flow.yaml  line_counts_spec.yaml  pipeline.yaml  sum_totals_spec.yaml
cli/examples/pipeline/count-lines/: module.yaml  project.yaml  workflow.nf
cli/examples/pipeline/data/: participants.csv
cli/examples/pipeline/filter-samples/: module.yaml  project.yaml  workflow.nf
cli/examples/pipeline/sum-total/: module.yaml  project.yaml  workflow.nf
cli/examples/red-hair/: module.yaml  project.yaml  workflow.nf
cli/examples/sheet-add/: module.yaml  participants.csv  project.yaml  workflow.nf
cli/src/: config.rs  defaults.rs  deps.yaml  error.rs  flow_spec.rs  lib.rs  main.rs  module_spec.rs  participants.public.template.yaml  pipeline_spec.rs  project_spec.rs  sample_data.yaml  schema.sql  spec_format.rs  subscriptions.rs  telemetry.rs  types.rs
cli/src/cli/: examples.rs  mod.rs  syft_url.rs  upgrade.rs
cli/src/cli/commands/: biobank.rs  check.rs  collections.rs  config_cmd.rs  contacts.rs  daemon.rs  datasets.rs  fastq.rs  files.rs  flow.rs  hard_reset.rs  inbox.rs  info.rs  init.rs  jupyter.rs  key.rs  messages.rs  mod.rs  module.rs  module_management.rs  network.rs  participant.rs  participants.rs  pipeline.rs  project.rs  project_management.rs  python.rs  run.rs  run_dynamic.rs  sample_data.rs  samplesheet.rs  sbc.rs  sessions.rs  setup.rs  sql.rs  submit.rs  syc.rs  syftbox.rs  syftboxd.rs  update.rs
cli/src/cli/download_cache/: downloader.rs  manifest.rs  mod.rs
cli/src/data/: collections.rs  datasets.rs  db.rs  dev_envs.rs  files.rs  flows.rs  genotype_detect.rs  mod.rs  module_editor.rs  modules.rs  pipelines.rs  project_editor.rs  projects.rs  response.rs  sessions.rs
cli/src/messages/: db.rs  mod.rs  models.rs  session.rs  sync.rs  watcher.rs
cli/src/syftbox/: app.rs  control.rs  endpoint.rs  mod.rs  rpc.rs  storage.rs  syc.rs  types.rs
cli/src/templates/: module.yaml  project.yaml  template.nf  workflow.nf
cli/src/templates/default/: nextflow.config  template.nf
cli/tests/: biovault_integration_test.rs  cli_test.rs  const_test.rs  genotype_detect_test.rs  hard_reset_test.rs  integration_test.rs  key_flow_test.rs  permission_test.rs  sql_integration_test.rs
cli/tests/data/: participants_all.csv  participants_herc2.csv  variant_overlay.json
scripts/: jq  (+5 more)
(+314 files in other folders)
