[package]
name = "biovault"
version = "0.1.0"
edition = "2021"
authors = ["Madhava Jay <madhava@openmined.org>"]
description = "A bioinformatics data vault CLI tool"
license = "Apache-2.0"
repository = "https://github.com/openmined/biovault"
keywords = ["bioinformatics", "cli", "data", "vault"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "bv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
sysinfo = "0.30"
which = "6.0"
tempfile = "3.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
indicatif = "0.17"
futures-util = "0.3"
blake3 = { version = "1.5", features = ["rayon"] }
hex = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
