[package]
name = "biovault"
version = "0.1.79"
edition = "2021"
authors = ["Madhava Jay <madhava@openmined.org>"]
description = "A bioinformatics data vault CLI tool"
license = "Apache-2.0"
repository = "https://github.com/openmined/biovault"
keywords = ["bioinformatics", "cli", "data", "vault"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "bv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
sysinfo = "0.30"
which = "6.0"
tempfile = "3.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
indicatif = "0.17"
futures-util = "0.3"
blake3 = { version = "1.5", features = ["rayon"] }
sha2 = "0.10"
hex = "0.4"
dialoguer = "0.11"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
glob = "0.3"
globset = "0.4"
regex = "1.10"
flate2 = "1.0"
walkdir = "2.4"
semver = "1.0"
self_update = { version = "0.41", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
rand = "0.8"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
include_dir = "0.7"
lazy_static = "1.4"
notify = "6.1"
libc = "0.2"
csv = "1.3"

[build-dependencies]
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"
serial_test = "3.1"

[features]
# Enable to include slower, IO-heavy tests (e.g., FASTQ helpers)
slow-tests = []
e2e-tests = []
